<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostJournalActivity">

    <EditText
        android:id="@+id/post_description_id"
        android:layout_width="394dp"
        android:layout_height="59dp"
        android:layout_marginTop="164dp"
        android:ems="10"
        android:hint="@string/thoughts_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_imageView" />

    <ImageView
        android:id="@+id/post_imageView"
        android:layout_width="432dp"
        android:layout_height="287dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/a_photographer" />

    <TextView
        android:id="@+id/post_username_textview"
        android:layout_width="166dp"
        android:layout_height="39dp"
        android:layout_marginTop="240dp"
        android:text="Robert"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_imageView" />

    <ImageView
        android:id="@+id/postCameraButton"
        android:layout_width="93dp"
        android:layout_height="85dp"
        android:layout_marginBottom="184dp"
        app:layout_constraintBottom_toTopOf="@+id/postTitleEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_imageView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/postTitleEditText"
        android:layout_width="394dp"
        android:layout_height="59dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/post_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_imageView" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="67dp"
        android:layout_height="66dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_description_id" />

    <Button
        android:id="@+id/post_save_journal_button"
        android:layout_width="322dp"
        android:layout_height="52dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_progressBar"
        app:layout_constraintVertical_bias="0.792" />

    <TextView
        android:id="@+id/post_date_textview"
        android:layout_width="175dp"
        android:layout_height="39dp"
        android:layout_marginTop="240dp"
        android:text="Today"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/post_username_textview"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>